src/objects/Action_Item__c.object
<CustomObject>
    <customHelpPage>Help_Action_Item_VF</customHelpPage>
    <fields>
        <fullName>Action_Item_Type__c</fullName>
        <label>Action Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <encrypted>true</encrypted>
        <label>Action Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_Me__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Assign To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Action items can be assigned to users of Collaborate only.  If you need to assign an action item to a person who does not access Collaborate, please assign to yourself and describe who will complete the item in the description.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bring_Forward_Date__c</fullName>
        <label>Bring Forward Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bring_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bring Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <formula>Milestone__r.Plan_Goal__r.Plan__r.Case__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encrypted>true</encrypted>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Individual_Name__c</fullName>
        <formula>Plan__r.Case__r.Contact.FirstName &amp; &quot; &quot; &amp; Plan__r.Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Plan Milestone</label>
        <referenceTo>Plan_Milestone__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MyActionItems__c</fullName>
        <formula>Assigned_To__r.Id ==  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MyActionItems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Goal</label>
        <referenceTo>Plan_Goal__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>TEXT(Plan__r.Plan_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Review_Date__c</columns>
        <columns>Activity__c</columns>
        <columns>Individual_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Milestone__c</columns>
        <columns>Plan_Goal__c</columns>
        <columns>Plan__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_progress</fullName>
        <columns>NAME</columns>
        <columns>Review_Date__c</columns>
        <columns>Activity__c</columns>
        <columns>Individual_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Milestone__c</columns>
        <columns>Plan_Goal__c</columns>
        <columns>Plan__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In progress</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Review_Date__c</columns>
        <columns>Activity__c</columns>
        <columns>Individual_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Milestone__c</columns>
        <columns>Plan_Goal__c</columns>
        <columns>Plan__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MyActionItems__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Action Items</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>Action Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bring_Forward_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Bring_Forward__c= TRUE), ISBLANK(  Bring_Forward_Date__c ))</errorConditionFormula>
        <errorDisplayField>Bring_Forward_Date__c</errorDisplayField>
        <errorMessage>Please enter the Bring Forward Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>false</active>
        <description>**丄具슞七풑 妶斏麛좶랒웇쟄颡ꁚ 苻膃炌緄饩怞떦橴鰀 蔵筫踱峬姷됴僦껓쓑 脇麳ꉳ嶓鲭萆菙麴言 尺珸奖췼믵殁勝癃谀 戩滂嘏跐瘋鞁삘퓵圀 塊釚쑭騭燮詐櫃뷖룑 呣늆恊랼昃냠먉쑣쟑 枸씻槬劜워憡滔摑껑 洇隄刈妾牌撕듣ꍄ뿑 涘왎葧圣꽁暸鬉딛夀 橾钡쓯시滑拎兼ꆮꉚ 襽绕莗씯帘聉惙志稀.&amp;\\ ䷀仄䷀䷀䷀䷐79008!</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
OR(
ISCHANGED( Activity__c ),
ISCHANGED( Action_Item_Type__c ),
ISCHANGED( Bring_Forward__c ),
ISCHANGED( Bring_Forward_Date__c ),
ISCHANGED( Date_Completed__c ),
ISCHANGED( Description__c ),
ISCHANGED (Priority__c),
ISCHANGED( Review_Date__c ),
ISCHANGED(  Status__c )),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Navigator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Coordinator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;,
$User.Id &lt;&gt; Case__r.Owner:User.Id,  
$User.Id &lt;&gt; CreatedById,
$User.Id &lt;&gt;  Assigned_To__r.Id 
)</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit assigned action items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Edit_Permissions</fullName>
        <active>true</active>
        <description>**湉坌閤樆띮搠&amp;\704!</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;STADD Director&quot;, 
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;STADD Coordinator&quot;, 
$User.Id &lt;&gt;  Milestone__r.Plan_Goal__r.Plan__r.Case__r.OwnerId, 
$User.Id &lt;&gt; CreatedById,
$User.Id &lt;&gt;  Assigned_To__c,
NOT(ISNEW()) 
)</errorConditionFormula>
        <errorMessage>You cannot edit Action Items that you did not create, or are not assigned to you</errorMessage>
    </validationRules>
</CustomObject>